# uni_control_hub

./: .gitignore  .metadata  Cargo.toml  README.md  distribute_options.yaml  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  pubspec.yaml  synergy_integration.md  troubleshooting.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release_builds.yaml
assets/anim/: mouse_anim.json
assets/licenses/: synergy_core
deskflow/: deskflow-server.conf
deskflow_client/: Cargo.toml
deskflow_client/src/: lib.rs  server_proxy.rs  server_update.rs
deskflow_client/src/messages/: keep_alive_message.rs  mod.rs
flutter/: .gitignore  analysis_options.yaml  distribute_options.yaml  pubspec.yaml  troubleshooting.md
flutter/lib/: main.dart
flutter/lib/rust/: frb_generated.dart
flutter/linux/flutter/: generated_plugins.cmake
flutter/macos/Runner/: AppDelegate.swift  Info.plist
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/synergy/: synergy_ x64
flutter/rust/src/: frb_generated.rs
flutter/rust_builder/: pubspec.yaml
flutter/rust_builder/android/: settings.gradle
flutter/rust_builder/linux/: CMakeLists.txt
flutter/rust_builder/macos/: rust_lib_uni_control_hub.podspec
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: main.dart
lib/app/client/: client.dart  client_screen.dart
lib/app/data/: app_data.dart  capabilities.dart  client.dart  client_screen.dart  dialog_handler.dart  extensions.dart  file_manager.dart  info_data.dart  linux_usb_hotplug.dart  logger.dart  (+2 more)
lib/rust/: frb_generated.dart  frb_generated.io.dart
linux/: CMakeLists.txt  my_application.cc  synergy_x64
linux/flutter/: generated_plugins.cmake
macos/: Podfile  synergy_arm64  unihub.podspec
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/deskflow_client/: Readme.md
rust/deskflow_client/src/: deskflow_client.rs
rust/deskflow_client/src/messages/: hello_back_message.rs  hello_message.rs  message.rs  message_type.rs  screen_info_message.rs  server_type.rs
rust/src/: frb_generated.rs
rust/src/api/: client_handler.rs  events.rs  hid_report.rs  input_handler.rs  lan_mouse_capture.rs  mod.rs  rx_handlers.rs  simple.rs  uni_control.rs  uni_control_hub.rs  uni_event.rs
rust/src/api/clients/: ble_client.rs  client_adb.rs  client_ble.rs  client_usb.rs  mod.rs  uni_client.rs  usb_client.rs
rust/src/api/clients/ble/: mod.rs
rust/src/api/clients/usb/: mod.rs  rusb_client.rs
rust/src/api/src/: deskflow_server.rs  lib.rs
rust/src/api/src/clients/usb/: mod.rs
rust_builder/android/: build.gradle
rust_builder/ios/: rust_lib_uni_control_hub.podspec
rust_builder/macos/: rust_lib_uni_control_hub.podspec
rust_builder/windows/: CMakeLists.txt
src/: deskflow_server.rs  lib.rs  main.rs
uni_hub_android_server/: .gitignore  Readme.md  UniHubServer.java
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
(+77 files in other folders)
