[package]
name = "uni_control_hub_rust"
version = "0.1.0"
edition = "2021"
description = "UniControlHub rust backend"
license = "GPL-3.0-or-later"
repository = "https://github.com/rohitsangwan01/uni_control_hub"

[dependencies]
deskflow_client = { path = "./deskflow_client" }
tokio = { version = "1.41.1" }
futures = "0.3.28"
anyhow = "1.0.93"
hickory-resolver = "0.24.1"
log = "0.4.20"
env_logger = "0.11.3"
slab = "0.4.9"
tokio-util = "0.7.11"
# ble-peripheral-rust = "0.1.0"
ble-peripheral-rust = { path = "/Users/rohitsangwan/Drive/Devlopment/rust/ble-peripheral-rust" }
uuid = "1.11.0"
nusb = { git = "https://github.com/kevinmehall/nusb" }
