[package]
description = "An unofficial, community-driven Deskflow Client implementation in Rust"
name = "deskflow_client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/rohitsangwan01/deskflow_rust"

[dependencies]
byteorder = "1.5.0"
tokio = { version = "1.40.0", features = [
    "sync",
    "net",
    "rt",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
