[package]
name = "rust_lib_uni_control_hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
deskflow_client = { path = "./deskflow_client" }
tokio = { version = "1.41.1" }
futures = "0.3.28"
anyhow = "1.0.93"
hickory-resolver = "0.24.1"
log = "0.4.20"
env_logger = "0.11.5"
slab = "0.4.9"
tokio-util = "0.7.11"
# ble-peripheral-rust = "0.1.0"
ble-peripheral-rust = { path = "/Users/rohitsangwan/Drive/Devlopment/rust/ble-peripheral-rust" }
uuid = "1.11.0"
nusb = { git = "https://github.com/kevinmehall/nusb" }
